--- a/Exercise12/index.html
+++ b/Exercise12/index.html
@@ -29,7 +29,7 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="card">
-                    <div class="card-body" id="d_object">
+                    <div class="card-body" id="d_object" style="background-color: #f3f3f3;">
                       
                     </div>
                   </div>
