--- a/Practice6/index.html
+++ b/Practice6/index.html
@@ -49,7 +49,7 @@
                         </label>
                     </div>   
                     <select class="form-select mt-2" aria-label="Default select example" id="pais">
-                        <option selected>Pais</option>
+                        <option value="">Seleccione Pais</option>
                         <option value="México">México</option>
                         <option value="Colombia">Colombia</option>
                         <option value="Japón">Japón</option>
